İnternet paylaşım ekranı tasarımı oluşturuldu.

--- a/src/app/components/grid/component.grid.html
+++ b/src/app/components/grid/component.grid.html
@@ -87,3 +87,5 @@
     <history></history>
     <permission></permission>
     <property></property>
+    <dialogyesno></dialogyesno>
+    <dialogreadonly></dialogreadonly>
