Info mesaj ekranı oluşturuldu.

--- a/src/app/components/grid/component.grid.html
+++ b/src/app/components/grid/component.grid.html
@@ -89,3 +89,5 @@
     <property></property>
     <dialogyesno></dialogyesno>
     <dialogreadonly></dialogreadonly>
+    <dialoginput></dialoginput>
+    <dialoginfo></dialoginfo>
