Dosya,klasör kilitleme diyalog ekranı oluşturuldu.

--- a/src/app/components/grid/component.grid.html
+++ b/src/app/components/grid/component.grid.html
@@ -91,3 +91,4 @@
     <dialogreadonly></dialogreadonly>
     <dialoginput></dialoginput>
     <dialoginfo></dialoginfo>
+    <dialogpasswordconfirm></dialogpasswordconfirm>
