--- a/src/app/components/folderside/component.folderside.html
+++ b/src/app/components/folderside/component.folderside.html
@@ -1,23 +1,15 @@
 <div ngClass="folderSide">
     <div id="diskTree" ngClass="directory tj_container">
         <ul>
-            <li><span ngClass="tj_description"><span ngClass="tj_mod_icon"><span>◢</span></span><span ngClass="tj_icon"><img
-                            src="/assets/images/hdd.png" width="15px/"></span>Diskler</span>
+            <li><span ngClass="tj_description"><span ngClass="tj_mod_icon"><span>◢</span></span><span
+                        ngClass="tj_icon"><img src="/assets/images/hdd.png" width="15px/"></span>Diskler</span>
                 <ul>
-                    <li>
-                        <span onclick="openDisk(40);" ngClass="tj_description selected tj_leaf">
+                    <li *ngFor="let disk of data">
+                        <span (click)="openDisk(disk.id);" ngClass="tj_description selected tj_leaf">
                             <span ngClass="tj_icon">
-                                <img src="/assets/images/hdd.png" width="15px/">
+                                <img src="/assets/images/hdd.png" width="15px">
                             </span>
-                        <span>Sanal HDD (959,1 KB)</span>
-                        </span>
-                    </li>
-                    <li>
-                        <span onclick="openDisk(42);" ngClass="tj_description tj_leaf">
-                            <span ngClass="tj_icon">
-                                <img src="/assets/images/hdd.png" width="15px/">
-                            </span>
-                        <span>SQL Disk (0 Byte)</span>
+                            <span>{{disk.name}} ({{disk.totalSize}})</span>
                         </span>
                     </li>
                 </ul>
@@ -30,8 +22,8 @@
                 <span ngClass="tj_description">
                     <span ngClass="tj_mod_icon">
                         <span>◢</span>
-                </span>
-                <span ngClass="tj_icon">
+                    </span>
+                    <span ngClass="tj_icon">
                         <img src="/assets/images/hdd.png" width="15px/">
                     </span>Kişisel Alanım</span>
                 <ul>
@@ -40,7 +32,7 @@
                             <span ngClass="tj_icon">
                                 <img src="/assets/images/hdd.png" width="15px/">
                             </span>
-                        <span>Internet Paylasimlarim (416,2 KB)</span>
+                            <span>Internet Paylasimlarim (416,2 KB)</span>
                         </span>
                     </li>
                 </ul>
