FileUpload ekranı oluşturuldu.

--- a/src/app/components/contextmenu/component.contextmenu.html
+++ b/src/app/components/contextmenu/component.contextmenu.html
@@ -2,8 +2,9 @@
     <div ngClass="contextMenuTitle">
         <span>{{title}}</span>
     </div>
-    <div ngClass="{{item.getStyleClass()}}" *ngFor="let item of items" (click)="onItemClicked(item);">
+    <div ngClass="{{item.splitBottom ? 'contextMenuLine splitterBottom' : 'contextMenuLine'}}"
+        *ngFor="let item of items" (click)="onItemClicked(item);">
         <div ngClass="contextMenuItemLogo"><img src="{{item.logo}}"></div>
-        <div ngClass="contextMenuItemText"><span>{{item.text}}</span></div>
+        <div ngClass="contextMenuItemText"><span>{{item.name}}</span></div>
     </div>
 </div>
