Servis yapısı düzenlendi.

--- a/src/app/components/dialog/component.dialoginput.html
+++ b/src/app/components/dialog/component.dialoginput.html
@@ -16,7 +16,7 @@
                 <p class="dialogText">{{message}}</p>
             </div>
             <div class="dialogInput" name="dialogInput">
-                <input type="text" placeholder="{{placeholder}}">
+                <input type="text" [(ngModel)]="value" placeholder="{{placeholder}}">
             </div>
             <div class="dialogControls" name="controls">
                 <div class="dialogSingleControl">
