--- a/src/app/components/dialog/component.dialogupload.html
+++ b/src/app/components/dialog/component.dialogupload.html
@@ -3,6 +3,9 @@
         <div ngClass="dialogProgressTitle">
             <span>Yükle</span>
         </div>
+        <div class="dialogProgressClose" (click)="hide();">
+            <img src="/assets/images/close.png">
+        </div>
     </div>
     <div ngClass="dialogProgressFrame">
         <div ngClass="dialogProgressIcon">
