--- a/src/app/components/properties/component.property.html
+++ b/src/app/components/properties/component.property.html
@@ -21,7 +21,7 @@
                 <span>Tip:</span>
             </div>
             <div ngClass="propertiesLineRight">
-                <span name="propertiesType">{{itemType}}</span>
+                <span name="propertiesType">{{type}}</span>
             </div>
         </div>
         <div ngClass="propertiesLine">
@@ -29,7 +29,7 @@
                 <span>Konum:</span>
             </div>
             <div ngClass="propertiesLineRight">
-                <input readonly="" name="propertiesLocation" type="text" value="{{location}}">
+                <input readonly="" name="propertiesLocation" type="text" value="{{path}}">
             </div>
         </div>
         <div ngClass="propertiesLine">
@@ -61,7 +61,7 @@
                 <span>Erisim:</span>
             </div>
             <div ngClass="propertiesLineRight">
-                <span name="propertiesAccess">{{permissions}}</span>
+                <span name="propertiesAccess">{{access}}</span>
             </div>
         </div>
         <div ngClass="propertiesLine">
