Dosya, klasör yorumları ekranı tamamlandı.

--- a/src/app/components/comment/component.comment.html
+++ b/src/app/components/comment/component.comment.html
@@ -19,7 +19,7 @@
                     <p>{{comment.time}}</p>
                 </div>
             </div>
-            <div class="commentsWindowLineRight"><textarea readonly="" rows="5" cols="30">{{comment.comment}}</textarea>
+            <div class="commentsWindowLineRight"><textarea readonly="" rows="5" cols="30">{{comment.text}}</textarea>
             </div>
         </div>
     </div>
