Dosya, klasör kilitleme ve kilit kaldırma ekranları tamamlandı.

--- a/src/app/components/grid/component.grid.html
+++ b/src/app/components/grid/component.grid.html
@@ -136,4 +136,5 @@
     <dialoginput></dialoginput>
     <dialoginfo></dialoginfo>
     <dialogpasswordconfirm></dialogpasswordconfirm>
+    <dialogpasswordinput></dialogpasswordinput>
     <dialogupload></dialogupload>
