Mevcut content yapısı düzenlendi.

--- a/src/app/components/grid/component.grid.html
+++ b/src/app/components/grid/component.grid.html
@@ -120,7 +120,7 @@
             </div>
         </div>
         <div ngClass="gridLine" [ngStyle]="{'flex':1, 'height':'100%'}"
-            (contextmenu)="showContextMenu($event,2,currentDiskId,true);">
+            (contextmenu)="showContextMenu($event,null,null,true);">
         </div>
         <div name="moveTo" ngClass="moveTo" style="display: none;">
             <span>Buraya Taşı</span>
