--- a/src/app/components/grid/component.grid.html
+++ b/src/app/components/grid/component.grid.html
@@ -1,4 +1,4 @@
-<div ngClass="grid" (contextmenu)="$event.preventDefault();">
+<div ngClass="grid" (contextmenu)="$event.preventDefault();" (mousemove)="mouseMove($event)" (mouseup)="mouseUp($event)">
     <div ngClass="gridHeader bottomBorder">
         <div ngClass="gridHeaderLine">
             <div ngClass="checkboxField">
