--- a/src/app/components/dialog/component.dialogpasswordconfirm.html
+++ b/src/app/components/dialog/component.dialogpasswordconfirm.html
@@ -1,6 +1,8 @@
-<div class="dialog" name="passwordConfirmDialog" *ngIf="visible">
-    <div class="dialogTop">
-        <div class="dialogTitle">
+<div class="dialog" name="passwordConfirmDialog" *ngIf="visible"
+    [ngStyle]="{'margin-left':marginLeft,'margin-top':marginTop}" (mouseup)="mouseUp($event)">
+    <div class="dialogTop" (mouseup)="mouseUp($event)">
+        <div class="dialogTitle" (mousedown)="mouseDown($event);" (mousemove)="mouseMove($event)"
+            (mouseup)="mouseUp($event)">
             <span name="dialogTitle">{{title}}</span>
         </div>
         <div class="dialogClose" (click)="hide();">
@@ -17,10 +19,12 @@
             </div>
             <div class="dialogInputGroup" name="dialogPasswordGroup">
                 <div class="dialogInput">
-                    <input type="password" [(ngModel)]="passwordFirst" name="dialogPasswordGroupFirst" placeholder="{{placeholderfirst}}">
+                    <input type="password" [(ngModel)]="passwordFirst" name="dialogPasswordGroupFirst"
+                        placeholder="{{placeholderfirst}}">
                 </div>
                 <div class="dialogInput">
-                    <input type="password" [(ngModel)]="passwordSecond" name="dialogPasswordGroupSecond" placeholder="{{placeholdersecond}}">
+                    <input type="password" [(ngModel)]="passwordSecond" name="dialogPasswordGroupSecond"
+                        placeholder="{{placeholdersecond}}">
                 </div>
             </div>
             <div class="dialogControls" name="controls">
