--- a/src/app/components/properties/component.property.html
+++ b/src/app/components/properties/component.property.html
@@ -1,6 +1,8 @@
-<div ngClass="properties" *ngIf="visible">
-    <div ngClass="propertiesTitle">
-        <div ngClass="propertiesTitleText">
+<div ngClass="properties" *ngIf="visible" [ngStyle]="{'margin-left':marginLeft,'margin-top':marginTop}"
+    (mouseup)="mouseUp($event)">
+    <div ngClass="propertiesTitle" (mouseup)="mouseUp($event)">
+        <div ngClass="propertiesTitleText" (mousedown)="mouseDown($event);" (mousemove)="mouseMove($event)"
+            (mouseup)="mouseUp($event)">
             <span name="propertiesTitle">{{title}}</span>
         </div>
         <div ngClass="propertiesTitleClose" (click)="hide();">
@@ -101,7 +103,8 @@
                 <span>&nbsp;</span>
             </div>
             <div ngClass="propertiesLineRight">
-                <button ngClass="propertiesLineRightAlignedRightButton" name="propertiesOk" (click)="Ok();">Tamam</button>
+                <button ngClass="propertiesLineRightAlignedRightButton" name="propertiesOk"
+                    (click)="Ok();">Tamam</button>
                 <button name="propertiesCancel" (click)="hide();">Iptal</button>
             </div>
         </div>
