Disk listesi ekranı kaydırılabilir hale getirildi.

--- a/src/app/components/contentside/component.contentside.html
+++ b/src/app/components/contentside/component.contentside.html
@@ -1,4 +1,4 @@
-<div ngClass="contentSide">
+<div ngClass="contentSide" [ngStyle]="{'width':width}">
     <folderpath></folderpath>
     <grid></grid>
 </div>
